--- a/angular.json
+++ b/angular.json
@@ -2,7 +2,8 @@
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
   "version": 1,
   "cli": {
-    "packageManager": "npm"
+    "packageManager": "npm",
+    "analytics": "6d616ffe-91eb-4f81-a006-8cb3ee104753"
   },
   "newProjectRoot": "projects",
   "projects": {
